--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gbs",
+  "name": "gbsapp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,13 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
+    "expo-audio": "~0.4.5",
+    "expo-av": "~15.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-document-picker": "~13.1.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "^14.1.4",
+    "expo-media-library": "~17.1.6",
+    "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.1.7"
   },
   "private": true
 }
