--- a/ios/gbs/Info.plist
+++ b/ios/gbs/Info.plist
@@ -49,5 +49,27 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<!-- iOS Permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to the camera to take photos or videos.</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to the microphone for recording audio.</string>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to your photo library to select images or videos.</string>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs permission to save photos or videos to your library.</string>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to provide location-based features.</string>
+
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs your location even when the app is in the background.</string>
+
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app requires background location access for better service delivery.</string>
 </dict>
 </plist>
