--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-audio": "~0.4.5",
     "expo-av": "~15.1.4",
