--- a/ios/gbs/Info.plist
+++ b/ios/gbs/Info.plist
@@ -60,6 +60,13 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to your photo library to select images or videos.</string>
 
+	<key>NSCameraUsageDescription</key>
+<string>We need access to your camera to take profile photos.</string>
+
+<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to select profile images.</string>
+
+
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs permission to save photos or videos to your library.</string>
 
