--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-maps": "1.20.1",
+    "react-native-permissions": "^5.4.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
