--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-audio": "~0.4.5",
     "expo-av": "~15.1.4",
     "expo-camera": "~16.1.6",
+    "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.5",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
