--- a/app.json
+++ b/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "gbs",
     "slug": "gbs",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      "expo-audio",
+      "expo-video"
+    ]
   }
 }
