--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.10.0",
     "expo": "~53.0.9",
-    "expo-audio": "~0.4.5",
+    "expo-audio": "~0.4.8",
     "expo-av": "~15.1.4",
     "expo-camera": "~16.1.6",
     "expo-device": "^7.1.4",
@@ -42,7 +42,8 @@
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "expo-video": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
