--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-media-library": "~17.1.6",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
+    "expo-video": "~2.2.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -42,8 +43,7 @@
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwind-react-native-classnames": "^1.5.1",
-    "expo-video": "~2.2.2"
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
