--- a/app.json
+++ b/app.json
@@ -3,9 +3,13 @@
     "name": "gbs",
     "slug": "gbs",
     "version": "1.0.0",
-    "plugins": [
-      "expo-audio",
-      "expo-video"
-    ]
+    "owner": "ayla02",
+    "projectId": "304fda12-9953-45cc-be82-e7eac2ae6f00",
+    "plugins": ["expo-audio", "expo-video"],
+    "extra": {
+      "eas": {
+        "projectId": "304fda12-9953-45cc-be82-e7eac2ae6f00"
+      }
+    }
   }
 }
