--- a/app.json
+++ b/app.json
@@ -5,11 +5,16 @@
     "version": "1.0.0",
     "owner": "ayla02",
     "projectId": "304fda12-9953-45cc-be82-e7eac2ae6f00",
-    "plugins": ["expo-video"],
+    "plugins": [
+      "expo-video"
+    ],
     "extra": {
       "eas": {
         "projectId": "304fda12-9953-45cc-be82-e7eac2ae6f00"
       }
+    },
+    "android": {
+      "package": "com.ayla02.gbs"
     }
   }
 }
