--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "tailwind-react-native-classnames": "^1.5.1"
   },
