--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo-module-scripts": "^4.1.7"
+    "expo-module-scripts": "^4.1.7",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
