--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.5.6",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
@@ -45,12 +46,13 @@
     "react-native-vector-icons": "^10.3.0",
     "socket.io-client": "^4.7.5",
     "tailwind-react-native-classnames": "^1.5.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "twrnc": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo-module-scripts": "^4.1.7",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "expo-module-scripts": "^4.1.7"
   },
   "private": true
 }
