--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.2",
+    "antd-mobile": "^5.39.0",
     "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
