--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,18 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
+
+    // ✅ Mapbox repo with authentication
+    maven {
+      url 'https://api.mapbox.com/downloads/v2/releases/maven'
+      authentication {
+        basic(BasicAuthentication)
+      }
+      credentials {
+        username = "mapbox"
+        password = project.properties["pk.eyJ1IjoibGVvbi1nYnMiLCJhIjoiY21jc3Eyam1kMTNhdDJqcTJwbzdtMWF2bSJ9.K3Jn-X37-Uy-J9hYU7XbQw"] ?: ""
+      }
+    }
   }
 }
 
