--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,43 @@
+// // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+// buildscript {
+//   repositories {
+//     google()
+//     mavenCentral()
+//   }
+//   dependencies {
+//     classpath('com.android.tools.build:gradle')
+//     classpath('com.facebook.react:react-native-gradle-plugin')
+//     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+//   }
+// }
+
+// def reactNativeAndroidDir = new File(
+//   providers.exec {
+//     workingDir(rootDir)
+//     commandLine("node", "--print", "require.resolve('react-native/package.json')")
+//   }.standardOutput.asText.get().trim(),
+//   "../android"
+// )
+
+// allprojects {
+//   repositories {
+//     maven {
+//       // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+//       url(reactNativeAndroidDir)
+//     }
+
+//     google()
+//     mavenCentral()
+//     maven { url 'https://www.jitpack.io' }
+//   }
+// }
+
+// apply plugin: "expo-root-project"
+// apply plugin: "com.facebook.react.rootproject"
+
+
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -30,6 +70,18 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
+
+    // ✅ Mapbox repo with authentication
+    maven {
+      url 'https://api.mapbox.com/downloads/v2/releases/maven'
+      authentication {
+        basic(BasicAuthentication)
+      }
+      credentials {
+        username = "mapbox"
+        password = project.properties["pk.eyJ1IjoibGVvbi1nYnMiLCJhIjoiY21jc3Eyam1kMTNhdDJqcTJwbzdtMWF2bSJ9.K3Jn-X37-Uy-J9hYU7XbQw"] ?: ""
+      }
+    }
   }
 }
 
