--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ prepare_react_native_project!
 
 target 'gbs' do
   use_expo_modules!
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
