--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,7 +39,9 @@
 
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+// plugins {
+//     id("com.google.gms.google-services") version "4.4.3" apply false
+// }
 buildscript {
   repositories {
     google()
@@ -89,9 +91,3 @@ allprojects {
 apply plugin: "expo-root-project"
 apply plugin: "com.facebook.react.rootproject"
 
-plugins {
-    
-
-    
-    id("com.google.gms.google-services") version "4.4.3" apply false
-}
