--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,10 +34,6 @@
 // }
 
 // apply plugin: "expo-root-project"
-// apply plugin: "com.facebook.react.rootproject"
-
-
-
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -49,6 +45,7 @@ buildscript {
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+    classpath('com.google.gms:google-services:4.4.2')
   }
 }
 
