--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
     "expo-video": "~2.2.2",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
