--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-build-properties": "^0.14.8",
-    "expo-camera": "~16.1.6",
+    "expo-camera": "~16.1.11",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.5",
+    "expo-face-detector": "^13.0.2",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
+    "expo-local-authentication": "~16.0.5",
     "expo-media-library": "~17.1.6",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
