--- a/ios/gbs/Info.plist
+++ b/ios/gbs/Info.plist
@@ -35,6 +35,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>We need access to your camera to take profile photos.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Sign in faster and more securely using Face ID.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app needs your location even when the app is in the background.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
