--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keychain": "^10.0.0",
     "react-native-maps": "1.20.1",
     "react-native-mime-types": "^2.5.0",
     "react-native-permissions": "^5.4.1",
