--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
     "expo-camera": "~16.1.11",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.5",
-    
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
-  
     "expo-media-library": "~17.1.6",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
@@ -59,6 +57,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
+    "react-native-webview": "^13.16.0",
     "socket.io-client": "^4.7.5",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss": "^3.4.17",
