--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-biometrics": "^3.0.1",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keychain": "^10.0.0",
